2009-08-21 1.0.6
                  Replace redirect page by a message on the index one

2009-08-21 1.0.5
                  Add history tab

2009-08-19 1.0.4
                  Update configuration pages

2009-08-18 1.0.3
                  Add configuration option to define menu link or not

2009-08-18 1.0.2
                  Add configuration option to define template variable or not

2009-08-17 1.0.1
                  Add default value to language translation

2009-08-17 1.0.0
                  Put under SVN control

2009-08-17 0.1.f
                  Add obsolete list

2009-08-17 0.1.e
                  Add language configuration for items texts
                  Add template variable

2009-08-14 0.1.d
                  Add a redirection page when successfully sent message

2009-08-13 0.1.c
                  Fix regexp bug in mail format check in javascript

2009-08-13 0.1.b
                  Add admin management

2009-08-13 0.1.a
                  Plugin creation