@@ -20,3 +20,7 @@
 .cf-lang {
 	text-align: right;
 }
+.cf-refresh {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
