@@ -1,5 +1,5 @@
 <?php
-/* $Id: plugin.lang.php,v 1.10 2009/09/01 13:25:03 Criss Exp $ */
+/* $Id: plugin.lang.php,v 1.11 2009/09/01 17:10:50 Criss Exp $ */
 if (!defined('PHPWG_ROOT_PATH')) die('Hacking attempt!');
 global $lang;
 
@@ -63,6 +63,12 @@ $lang['cf_redirect_delay'] = 'Pause delay of redirection';
 $lang['cf_label_link'] = 'Link management (outside menubar)';
 $lang['cf_define_link'] = 'Define link';
 $lang['cf_link'] = 'Name of the template variable containing the HTML link to the contact form';
+// Emails tab
+$lang['cf_tab_emails'] = 'E-mails';
+$lang['cf_emails_desc'] = 'Destination e-mails management';
+$lang['cf_active'] = 'Active e-mail';
+$lang['cf_no_mail'] = 'No e-mail address available';
+$lang['cf_refresh'] = 'Regenerate e-mail list address';
 // Language tab
 $lang['cf_tab_language'] = 'Localization';
 $lang['cf_language_desc'] = 'Messages translation';
