@@ -1,5 +1,6 @@
 2009-08-21 1.0.6
                   Replace redirect page by a message on the index one
+                  Add e-mail address management
 
 2009-08-21 1.0.5
                   Add history tab
